Overhauled how dom-if templates were being used. This new method is more generalized and simplified than the previous version. Now ALL top level dom elements are wrapped by a single template.

--- a/app-file-system.html
+++ b/app-file-system.html
@@ -3,23 +3,24 @@
 
   :host {
 
-    /* Available to adjust to taste to match app look and feel. */
+    /* Available as public api, to match app theme. */
     --afs-light-mode-start-gradient: var(--app-background-color) 40%;
     --afs-dark-mode-start-gradient:  var(--app-background-color) 40%;
 
-    /* Available to adjust to taste to match app look and feel. */
+    /* Available as public api, to match app theme. */
     --afs-light-mode-end-gradient: var(--app-primary-light-color) 100%;
     --afs-dark-mode-end-gradient:  var(--app-primary-dark-color)  180%;
 
-    /* Available to adjust to taste to match app look and feel. */
+    /* Available as public api, to match app theme. */
     --afs-gradient-text-color:           var(--app-dark-text);
     --afs-gradient-secondary-text-color: var(--app-secondary-text);
     --afs-gradient-focus-color:          var(--app-primary-color);
 
-
+    /* NOT part of public api. Do NOT use. */
     --gradient-start: var(--afs-light-mode-start-gradient);
     --gradient-end:   var(--afs-light-mode-end-gradient);
 
+    /* Can be overridden to customize as part of public api. */
     --afs-gradient-background: radial-gradient(
       ellipse at top left, 
       var(--gradient-start), 
@@ -27,117 +28,31 @@
     );
   }
 
-  #spinner {
-    z-index: 2;
-  }
-
 </style>
 
 
-<afs-file-sources id="sources"
-                  accept="[[accept]]"
-                  coll="[[coll]]"
-                  data="[[_dbData]]"
-                  hide-dropzone="[[hideDropzone]]"
-                  list="[[list]]"
-                  maxfiles="[[maxfiles]]"
-                  maxsize="[[maxsize]]"
-                  multiple="[[multiple]]"
-                  no-upload-confirm="[[noUploadConfirm]]"
-                  unit="[[unit]]"
-                  on-delete-previous="__deletePreviousHandler"
-                  on-files-added="__filesAddedHandler"
-                  on-items-saved="__itemsSavedHandler"
-                  on-open-list="openList"
-                  on-open-save-as-modal="__openSaveAsModal"
-                  on-progress-changed="__progressChangedHandler"
-                  on-upload-done="__uploadDone"
-                  on-upload-updated="__uploadUpdated">
-</afs-file-sources>
-
-<!-- Control memory footprint by removing "heavy" elements when not in use. -->
-<template id="stamperTemplate"
+<!-- Control memory footprint when not in use. -->
+<template id="stamper"
           is="dom-if"
           if="[[_stamp]]"
           restamp>
 
 
-  <afs-file-list id="fileList"
-                 coll="[[coll]]"
-                 data="[[_dbData]]"
-                 hide-dropzone="[[hideDropzone]]"
-                 uploads="[[_uploads]]"
-                 on-list-confirm-selection="__listOverlayConfirmSelectionHandler"
-                 on-list-overlay-closed="__listOverlayClosedHandler">
-  </afs-file-list>
-
-
-  <afs-camera-roll id="cameraRoll"
-                   coll="[[coll]]"
-                   data="[[_dbData]]"
-                   progress="[[_progress]]"
-                   uploads="[[_uploads]]"
-                   on-list-confirm-selection="__listOverlayConfirmSelectionHandler"
-                   on-list-overlay-closed="__listOverlayClosedHandler">
-  </afs-camera-roll>
-
-
-  <afs-file-editor id="fileEditor"
-                   item="[[_liveItem]]"
-                   list="[[list]]">
-  </afs-file-editor>
-
-
-  <afs-photo-carousel id="carousel"
-                      coll="[[coll]]"
-                      item="[[_liveItem]]"
-                      list=[[list]]>
-  </afs-photo-carousel>
-
-
-  <afs-image-editor id="imageEditor"
-                    item="[[_liveItem]]"
-                    list="[[list]]">
-  </afs-image-editor>
-
-
-  <afs-video-viewer id="videoViewer"
-                    item="[[_liveItem]]">
-  </afs-video-viewer>
-
-
-  <afs-photo-viewer id="photoViewer"
-                    item="[[_liveItem]]">
-  </afs-photo-viewer>
-
-
-  <afs-confirm-selection-modal id="confirmSelectionModal"
-                               on-selection-confirmed="__confirmSelectionModalConfirmed"
-                               on-selection-dismissed="__confirmSelectionModalDismissed">
-  </afs-confirm-selection-modal>
+  <afs-main id="main"
+            accept="[[accept]]"
+            coll="[[coll]]"
+            hide-dropzone="[[hideDropzone]]"
+            list="[[list]]"
+            maxfiles="[[maxfiles]]"
+            maxsize="[[maxsize]]"
+            multiple="[[multiple]]"
+            no-upload-confirm="[[noUploadConfirm]]"
+            unit="[[unit]]"
+            on-app-file-system-items-saved="__filesSavedHandler"
+            on-app-file-system-files-added="__filesAddedHandler"
+            on-inactive-changed="__inactiveChangedHandler"
+            on-uploads-count-changed="__uploadsCountChangedHandler">
+  </afs-main>
 
 
 </template>
-
-
-<app-spinner id="spinner"
-             full-screen>
-</app-spinner>
-
-
-<afs-share-modal id="shareModal"
-                 item="[[_liveItem]]">
-</afs-share-modal>
-
-
-<afs-delete-modal id="deleteConfirmModal"
-                  on-delete="__deleteModalDelete"
-                  on-canceled="__deleteModalCanceled">                                
-</afs-delete-modal>
-
-
-<afs-save-as-modal id="saveAsModal"
-                   list="[[list]]"
-                   on-skip="__saveAsModalSkip"
-                   on-update="__saveAsModalUpdate">                                 
-</afs-save-as-modal>
