Several bug fixes and quality of life improvements. Added a method which allows the photo-viewer overlay to wait, if necessary, for the hi res photo to load before switching to it. This avoids fouc during the entry animation. Added guars in the form of optional chaining at the top level for situations where certain elements may or may not be stamped and available for reference. This is due to the ability for afs to function in the background, where several unneeded ui elements are never imported/rendered. Reimagined image editor action buttons. Now there is an animated button which overlays the image preview for filters and adjuster pages. This greatly improves UX for those pages. Updated webgl-filter dep.

--- a/editors/afs-image-cropper.html
+++ b/editors/afs-image-cropper.html
@@ -130,6 +130,7 @@
 <afs-image-editor-item button-disabled="[[_cropBtnDisabled]]" 
 									 		 button-icon="crop" 
 									 		 button-label="CROP"
+									 		 button-placement="after-content"
 									 		 on-image-editor-item-btn-clicked="__cropClicked">
 
 	<afs-crop-wrapper id="cropper"
