Migrated the camera roll list to use the new lite-list element powered by the new db-list-mixin. Updated deps.

--- a/lists/afs-camera-roll.html
+++ b/lists/afs-camera-roll.html
@@ -166,10 +166,10 @@
                   all="[[_all]]"
                   coll="[[coll]]"
                   hide-checkboxes="[[_hideCheckboxes]]"
-                  opened="[[_opened]]"
                   scale="[[_scale]]"
                   slot="content"
-                  uploads="[[uploads]]">
+                  uploads="[[uploads]]"
+                  visible="[[_opened]]">
   </afs-roll-items>
 
 
