Updated photo-carousel and photo-viewer to be compatable with the new version of lazy-image. Updated deps.

--- a/carousel/afs-db-carousel.html
+++ b/carousel/afs-db-carousel.html
@@ -20,6 +20,7 @@
   afs-carousel-item {
     height:       100%;
     width:        100vw;
+    max-height:   100vh;
     max-width:    var(--carousel-max-width);
     margin-right: 8px;
   }
