--- a/carousel/afs-photo-carousel.html
+++ b/carousel/afs-photo-carousel.html
@@ -44,6 +44,7 @@
   #overlay {
     box-shadow:       none;
     background-color: transparent; 
+    padding-bottom:   0px;
 
     --header-backdrop-filter:            blur(10px);
     --header-background-parallax-height: 100%;
@@ -71,7 +72,7 @@
     display: inline-flex;
   }
 
-  #carousel {    
+  #carousel {
     opacity: 0;
   }
 
